Fix social media & navigation dots z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -134,6 +134,7 @@
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
+  z-index: 1;
 
   padding: 1rem;
 
@@ -198,6 +199,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  z-index: 1;
 
   padding: 1rem;
 
